crates/engine-orchestrator/tests/snapshots/plot__curve_multi_scenario_faceted.snap
---
source: crates/engine-orchestrator/tests/plot.rs
expression: "parse(&sample_size_curve_spec(&multi_scenario_grid(), &opts))"
---
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "data": {
    "values": [
      {
        "ci_hi": 0.55,
        "ci_lo": 0.47,
        "n": 50,
        "power": 0.51,
        "scenario": "optimistic",
        "series": "target_1",
        "target": "target_1"
      },
      {
        "ci_hi": 0.36,
        "ci_lo": 0.28,
        "n": 50,
        "power": 0.32,
        "scenario": "optimistic",
        "series": "target_2",
        "target": "target_2"
      },
      {
        "ci_hi": 0.78,
        "ci_lo": 0.7,
        "n": 100,
        "power": 0.74,
        "scenario": "optimistic",
        "series": "target_1",
        "target": "target_1"
      },
      {
        "ci_hi": 0.59,
        "ci_lo": 0.51,
        "n": 100,
        "power": 0.55,
        "scenario": "optimistic",
        "series": "target_2",
        "target": "target_2"
      },
      {
        "ci_hi": 0.89,
        "ci_lo": 0.83,
        "n": 150,
        "power": 0.86,
        "scenario": "optimistic",
        "series": "target_1",
        "target": "target_1"
      },
      {
        "ci_hi": 0.75,
        "ci_lo": 0.67,
        "n": 150,
        "power": 0.71,
        "scenario": "optimistic",
        "series": "target_2",
        "target": "target_2"
      },
      {
        "ci_hi": 0.95,
        "ci_lo": 0.91,
        "n": 200,
        "power": 0.93,
        "scenario": "optimistic",
        "series": "target_1",
        "target": "target_1"
      },
      {
        "ci_hi": 0.85,
        "ci_lo": 0.79,
        "n": 200,
        "power": 0.82,
        "scenario": "optimistic",
        "series": "target_2",
        "target": "target_2"
      },
      {
        "ci_hi": 0.45,
        "ci_lo": 0.37,
        "n": 50,
        "power": 0.41,
        "scenario": "realistic",
        "series": "target_1",
        "target": "target_1"
      },
      {
        "ci_hi": 0.26,
        "ci_lo": 0.18,
        "n": 50,
        "power": 0.22,
        "scenario": "realistic",
        "series": "target_2",
        "target": "target_2"
      },
      {
        "ci_hi": 0.66,
        "ci_lo": 0.58,
        "n": 100,
        "power": 0.62,
        "scenario": "realistic",
        "series": "target_1",
        "target": "target_1"
      },
      {
        "ci_hi": 0.47,
        "ci_lo": 0.39,
        "n": 100,
        "power": 0.43,
        "scenario": "realistic",
        "series": "target_2",
        "target": "target_2"
      },
      {
        "ci_hi": 0.78,
        "ci_lo": 0.72,
        "n": 150,
        "power": 0.75,
        "scenario": "realistic",
        "series": "target_1",
        "target": "target_1"
      },
      {
        "ci_hi": 0.62,
        "ci_lo": 0.54,
        "n": 150,
        "power": 0.58,
        "scenario": "realistic",
        "series": "target_2",
        "target": "target_2"
      },
      {
        "ci_hi": 0.87,
        "ci_lo": 0.81,
        "n": 200,
        "power": 0.84,
        "scenario": "realistic",
        "series": "target_1",
        "target": "target_1"
      },
      {
        "ci_hi": 0.73,
        "ci_lo": 0.65,
        "n": 200,
        "power": 0.69,
        "scenario": "realistic",
        "series": "target_2",
        "target": "target_2"
      },
      {
        "ci_hi": 0.35,
        "ci_lo": 0.27,
        "n": 50,
        "power": 0.31,
        "scenario": "doomer",
        "series": "target_1",
        "target": "target_1"
      },
      {
        "ci_hi": 0.18,
        "ci_lo": 0.12,
        "n": 50,
        "power": 0.15,
        "scenario": "doomer",
        "series": "target_2",
        "target": "target_2"
      },
      {
        "ci_hi": 0.52,
        "ci_lo": 0.44,
        "n": 100,
        "power": 0.48,
        "scenario": "doomer",
        "series": "target_1",
        "target": "target_1"
      },
      {
        "ci_hi": 0.32,
        "ci_lo": 0.24,
        "n": 100,
        "power": 0.28,
        "scenario": "doomer",
        "series": "target_2",
        "target": "target_2"
      },
      {
        "ci_hi": 0.65,
        "ci_lo": 0.57,
        "n": 150,
        "power": 0.61,
        "scenario": "doomer",
        "series": "target_1",
        "target": "target_1"
      },
      {
        "ci_hi": 0.45,
        "ci_lo": 0.37,
        "n": 150,
        "power": 0.41,
        "scenario": "doomer",
        "series": "target_2",
        "target": "target_2"
      },
      {
        "ci_hi": 0.74,
        "ci_lo": 0.68,
        "n": 200,
        "power": 0.71,
        "scenario": "doomer",
        "series": "target_1",
        "target": "target_1"
      },
      {
        "ci_hi": 0.56,
        "ci_lo": 0.48,
        "n": 200,
        "power": 0.52,
        "scenario": "doomer",
        "series": "target_2",
        "target": "target_2"
      }
    ]
  },
  "facet": {
    "columns": 3,
    "field": "scenario",
    "sort": [
      "optimistic",
      "realistic",
      "doomer"
    ],
    "type": "nominal"
  },
  "spec": {
    "height": 240.0,
    "layer": [
      {
        "encoding": {
          "detail": {
            "field": "series",
            "type": "nominal"
          },
          "strokeDash": {
            "field": "target",
            "type": "nominal"
          },
          "x": {
            "field": "n",
            "title": "Sample size (N)",
            "type": "quantitative"
          },
          "y": {
            "field": "power",
            "scale": {
              "domain": [
                0,
                1
              ]
            },
            "title": "Power",
            "type": "quantitative"
          }
        },
        "mark": {
          "point": true,
          "type": "line"
        }
      },
      {
        "encoding": {
          "detail": {
            "field": "series",
            "type": "nominal"
          },
          "x": {
            "field": "n",
            "title": "Sample size (N)",
            "type": "quantitative"
          },
          "y": {
            "field": "ci_lo",
            "title": "Power",
            "type": "quantitative"
          },
          "y2": {
            "field": "ci_hi"
          }
        },
        "mark": {
          "opacity": 0.2,
          "type": "errorband"
        }
      },
      {
        "encoding": {
          "y": {
            "datum": 0.8,
            "type": "quantitative"
          }
        },
        "mark": {
          "strokeDash": [
            4,
            4
          ],
          "type": "rule"
        }
      }
    ],
    "width": 200.0
  },
  "title": "Power vs sample size"
}
